astro/src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
  --accent: #00a3af;
  --accent-dark: #000d8a;
  --black: 15, 18, 25;
  --gray: 96, 115, 159;
  --gray-light: 229, 233, 240;
  --gray-dark: 34, 41, 57;
  --gray-mid: #717375;
  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
  --box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
    0 16px 32px rgba(var(--gray), 33%);
  --pc-break-point: 780px;
}

@font-face {
  /* font-family: 'Atkinson'; */
  /* src: url('/fonts/atkinson-regular.woff') format('woff'); */
  font-family: 'Helvetica Neue', 'Helvetica', 'Hiragino Sans',
    'Hiragino Kaku Gothic ProN', 'Arial', 'Yu Gothic', 'Meiryo', sans-serif;
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  /* font-family: 'Atkinson'; */
  /* src: url('/fonts/atkinson-bold.woff') format('woff'); */
  font-family: 'Helvetica Neue', 'Helvetica', 'Hiragino Sans',
    'Hiragino Kaku Gothic ProN', 'Arial', 'Yu Gothic', 'Meiryo', sans-serif;
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

body {
  /* font-family: 'Atkinson', sans-serif; */
  font-family: 'Helvetica Neue', 'Helvetica', 'Hiragino Sans',
    'Hiragino Kaku Gothic ProN', 'Arial', 'Yu Gothic', 'Meiryo', sans-serif;
  margin: 0;
  padding: 0;
  text-align: left;
  background: linear-gradient(var(--gray-gradient)) no-repeat;
  background-size: 100% 600px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  color: rgb(var(--gray-dark));
  font-size: 1.1em;
  line-height: 1.6;
}

main {
  width: 780px;
  max-width: calc(100% - 2em);
  margin: auto;
  padding: 1.5em 1em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-block-start: 1.2em;
  color: rgb(var(--black));
  line-height: 1.4;
}

h1 {
  font-size: 1.5rem;
}

h2 {
  font-size: 1.35rem;
}

h3 {
  font-size: 1.15rem;
}

h4 {
  font-size: 1.05rem;
}

h5 {
  font-size: 1.0rem;
}

strong,
b {
  font-weight: 700;
}

a {
  color: var(--accent);
}

a:hover {
  color: var(--accent);
}

p {
  margin-block: 0.8em;
}

textarea {
  width: 100%;
  font-size: 1rem;
}

input {
  font-size: 1rem;
}

table {
  width: 100%;
}

img {
  max-width: 100%;
  height: auto;
  border-radius: 8px;
}

code {
  padding: 2px 5px;
  background-color: rgb(var(--gray-light));
  border-radius: 2px;
}

pre {
  padding: 1.5em;
  border-radius: 8px;
}

pre>code {
  all: unset;
  font-size: 1.15rem;
}

blockquote {
  border-left: 8px solid var(--gray-mid);
  padding: 0 0 0 1.2em;
  margin: 1.5em 0;
  font-size: 1;
}

blockquote p {
  margin-block: 0.5em;
}

hr {
  border: none;
  border-top: 1px solid rgb(var(--gray-light));
}

@media (max-width: 780px) {

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-block-start: 1em;
    color: rgb(var(--black));
    line-height: 1.4;
  }

  h1 {
    font-size: 1.4rem;
  }

  h2 {
    font-size: 1.25rem;
  }

  h3 {
    font-size: 1.1rem;
  }

  h4 {
    font-size: 1.0rem;
  }

  h5 {
    font-size: 0.95rem;
  }

  body {
    font-size: 1em;
    line-height: 1.6;
  }

  main {
    padding: 0em 1em;
  }
}

a {
  text-decoration: none;
}

.sr-only {
  border: 0;
  padding: 0;
  margin: 0;
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
  clip: rect(1px 1px 1px 1px);
  /* maybe deprecated but we need to support legacy browsers */
  clip: rect(1px, 1px, 1px, 1px);
  /* modern browsers, clip-path works inwards from each corner */
  clip-path: inset(50%);
  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
  white-space: nowrap;
}

